@@ -11,12 +11,12 @@ AUX gitlab-mailroom.service 773 SHA256 39cea460db7fc505b136a2106902d0515890180e7
 AUX gitlab-unicorn.service 773 SHA256 010c9e223a30400d9155b39499eb0d7efad23b66baab9fcd9e365c689086b9bd SHA512 0bf9630aa91ed8f590a7bfa42d09b7ba33f6342b43b3d191c792c11157f8926c2a2ac2390eebd8179637e29b5bf68233d4699d62463497a0fd45b9bdbdd9167b WHIRLPOOL fbc709a5550dcc548a35c22c812dafe52ee507f5678b57c22c709ee89a399ae9109e2f56b7a13135d4140f1e024ebc4effe4aa4de13e0f36691da2a0737d9792
 AUX gitlab-workhorse.service 930 SHA256 09348a52fec333b4b19828752e0484400c1efa9dfb644723fcf8e80537e294b6 SHA512 6332024fe0049287899cf482b6e4439e9dd90da14e489d08aa8e5e79cb7872efcc517d99b69fa23b011b382acb1e5926496a78f08af5d2d64daa515b869a0c6a WHIRLPOOL 3749c6719b2a35c7de29763cd616e1e9cc30a85aa1630ffc46440334459b5922503d52629556c125a6dd6574bdc5f23f1b2a7f2a85e2270a415b22246e0b6bae
 AUX gitlab.conf 27 SHA256 cd9be088bbb67a5400407fc6f63c061eb224f16748b7d0812ff2c101f43ca263 SHA512 909c49fee6d050c1e94b2559ff2a9d54c5c346492be0e2920b50d56d69eaddbed67e3ac12e012d2a9601b5596640ebf33c8dc68fc588a03ca370d963294be37f WHIRLPOOL fa436e8d7d2643d450259d26b6e7b24dae69df47ed22e5ef2a567f37aa785fbf3b0eb1129ae7c8bf8986c29559fc3b744a34064375e5245dce2b10053cd715d9
-DIST gitlab-ce-8.14.5.tar.gz 29722006 SHA256 8e03214c1f741cf813453e7764a0da1d8f0ec957b5395d2e359b9f24bb5f3c8e SHA512 afdc8bcd3022f1b1e5f14c76a5ee696eda462ffeeba94411f3f82ba0b2e0647d017982f0357fe66a1272929569eb0f24e5d18bfda78b88599e91c9486438aaa9 WHIRLPOOL 1eba1abf2543bb8203349fe03e6debf5e837effcf7a23d1f4e7e49900db7d1bc77c62ca6f95c5b26b7c00c396499f3cc8c2ec2d0e5f209bc2d7da99d2f7a4668
 DIST gitlab-ce-8.15.4.tar.gz 20029958 SHA256 5d9df84b82e8b453f61f822fce44afb9603d03b3de23d73c855ce12f7629a33a SHA512 1e2315343ba2efb521bc5dc197b63f7b3af895327de76d1823345d6d39921d9a995b65f6211b572c07cf4a4583bcaf7e6f1ef159b38a7b7b1aa731e2f653c3ff WHIRLPOOL c85e4a389dec2d8807a158447eafb1062b2e1c70eb243f898c5155a26af92c99dba7bcf60217a51c26afbcb3e04ce996177b6e90cd4a0199f8fdc2c79c575ed8
-DIST gitlab-ce-8.16.0_rc2.tar.gz 20774518 SHA256 fbacb1f80c47343c46533cc05a17173c252ebf9168422cb22cae43e85a04d708 SHA512 63243875ed05dcc12e5b03c72123946f4efb67a5aa9803ad1bf757accb5ff7f5f9ee61a1cf91672cd97e9a3e21dedc142728dae5e32776ef4e4250259196b5f3 WHIRLPOOL e4520aad4a7f9ef832cf1ba7a129fe7345c77590d5f586542a7a28a257bfd26e60560f09e6595551a6277a9583a6d2da3b59b0899fc31a871dfddf6669d68818
-EBUILD gitlab-ce-8.14.5.ebuild 12058 SHA256 ef48879ad31e34e3b451ed39d1a196c1ae37b53296b39fb2f5d9c55f8cb04fc0 SHA512 24b314b35b24712471bf0f9e887a3c8cd434be2d5231f270ea0ef5f4d59377b2ba1049bf3ee7bf5feb54f77bd1d9d4121409640bd562a3a871c6bef1e7a80f45 WHIRLPOOL 7fef550d27617de2176b0f3fadb4575ad15f09e3bc204a82ea0b62c97497d36c1e0154fd18b483ac678ff7b5f8ecb464161a132ecf250bad839f28dd721e5100
+DIST gitlab-ce-8.16.4.tar.gz 20899790 SHA256 0ee69f010f2306a6b1d7fda377a0780951560880c974f62b8ab15935ddd93930 SHA512 a81ed04326262569a4d0112476624efafebf8fad8296fd6866881bb280abc5e9f7275bbe94d6d5e8c40491d88422368349a34066206fb60dcef3578f9ab0ccd1 WHIRLPOOL f5d3d84bb0c5fedddc195326603911abec19c8d0de95e26ccdb1db10df195288e3ecf1ad6aa04e1a778b6987418466508f4080888fcfa1847825916141cc87eb
+DIST gitlab-ce-8.17.0_rc1.tar.gz 22687611 SHA256 1e084e796313c3ece0dda45994823c3d168b44b559d13b5833482898a2c4a29a SHA512 6b8a9074a5f25bfd04738f42ad70c78cb627a44ed2d8e97d16a36b4e8217c4dd882af3d32ffc16143639fa5d7f46156805a5271c979e153736a1ff96802ca07f WHIRLPOOL ea5bac7c5d61b8ce10210f19cc2ceb22c07359bdfbd40261d2c69b956e27b7eab5dd92f892c950ddfbc193402aa81b3f59fc796803d05e2cd37cb56c31f22a53
 EBUILD gitlab-ce-8.15.4.ebuild 11982 SHA256 db794f18bc0d023a8b6adf49b82c2e37fd38b7206b064a7700289c0cfa16961c SHA512 ca30780d28ffc0242ac5f6ccad178cc44464a81f2d44cb13e53ddf06700d0f39b9fee9b77e356735435079b34090049d50d9019af71e92d6d8faaf3767a39dc5 WHIRLPOOL 42ee8b8e5a2c6fba69ecdbf6e306a87f369fa193f721c73481edc744953bfd210cb4495bc603ba01566efb2b0869ec71284a1f1b1c34d1a124bd08546829ca37
-EBUILD gitlab-ce-8.16.0_rc2.ebuild 11959 SHA256 331a1495d7b66606aa91b7371e82e3a93b5ebbd4f769eece696eb39d8da0b04c SHA512 f5a23c412b0b6e0335d7d257e228099916b0bba1a4942629f63d1b32c81d190949f75cad89b36e4aaa4795e477da507c2e5a5b31daf6e8781f188d222886232f WHIRLPOOL 272b80fe5aed6453766462e0a61ef3ff8a4c4aa85255194ce3c169dbf469937fd1854b02626ddd617843f76e5cd7a0c305580bdec6de52d67b10d122e9bfd769
-EBUILD gitlab-ce-9999.ebuild 11916 SHA256 935879ee08aa1a9dd7914766f913834dbb71f95438ebf53b7a8c5e78d8ae62d1 SHA512 2ca0b09f3fcbf3abf5c6dce066a4ffc2cdf95196a4cc36116c6f784a6d908fec667b63cc92fdc39665f3b78029b5ce85d9b8e4dfb541dde4b8568946c990459b WHIRLPOOL 32e18abbd6690268d3c4decc067c4a484f6644c9fe94d59154671519f02aa400f1ff974b2b114dd430c6d1790c5f3668be0a202a83c7d451424eb1a706a1315d
-MISC ChangeLog 12415 SHA256 74794cd33aef92f0d52309c17a86864debdb0470d01caf40eb92c68368cb90d4 SHA512 17248d3d2addc2f0171c608d8a3ddd925a7ac15a4d28f1bcafcabda6b135f88ead6d60843f0f9fe7d0d370f08d4e0bcf64858cc020065c20e4ebcb26e9f02930 WHIRLPOOL c5fb6f75f8d55e3b4f1c20e0a05587fd59831b31a88c06ee14851d7b27906d8c60d8afc037f328a6c324f56c87a667bf712b7e1b24ff2b3d3be9beeada094c27
+EBUILD gitlab-ce-8.16.4.ebuild 11982 SHA256 91875777d0953bffddd31318d9c5d4666ba59bd3446804d063c1199c603bd5a6 SHA512 7112bf185f25d90a11ee2a6e9d197c1ce781b49c486cc1afaff002ad66dcec7c9b43c3b9b6c26c62d23bb7e8c0fdd4c527e53a99f9674bb4af1e404454960227 WHIRLPOOL 76bd66e8b7d4ff04f02354cb6cdf3fa0b92ccf2cdcad26cf117f12330b3f3588713fd0d0465da2515750348975eb81daa6e02f984025804b7db50da99f4e8e5e
+EBUILD gitlab-ce-8.17.0_rc1.ebuild 12155 SHA256 6ce027d69b1fb5d5ff46a4f1c745ec0510b23c52f584cd89b0168f80c17dd69a SHA512 841f59f0f57f2eea09a786a931277724333a870c964f846ea01f1dd8f4d3928a2c62c59a2c7d4670c45d0abb76cee9145d4dde2eb509054f06545d9e20858f0b WHIRLPOOL ee2179f1f75e2e3ef89490ec5bd244b6ab84c9fd7f058c3d9275554bcaca01382ed9ecfb2277cbe876a0060100a4b463d42194113e233bbfa74481b9ae9be3c9
+EBUILD gitlab-ce-9999.ebuild 11916 SHA256 5bb2586d9d739d9453392f4bca9a6e2a3156be359e50de7e88d8f928a3ac2945 SHA512 0b5180f9166f9ecb63bdb5ff13fc1b7c50136cf6e5e64521783bdeb0f02925e5ff040527bf5c30653f85e1260aed1082b1a747fa3d32ca5f9cadc8f25368c149 WHIRLPOOL 6b1c1aa264f4f6fef97d0234de73eb833b09f3a2a681f90a134b022fe84ac99fdeb39f9af932a60369bb8a8062ceddb09fde21f56193378976568405b933bc89
+MISC ChangeLog 12731 SHA256 0dc12bc05b7eab06d38065ae68fcc80334712097723f67879c2904a22ca02eb7 SHA512 4ffe901aad98647bae759ca60d4b896989748add60029df9c39139e17c900b768deeef0130ad74d0c4945295848be3094084722af0633c488c632319179f1c67 WHIRLPOOL b76aafcc2902a19d568429237517ea61b6bf876a157c8aca4fa180edee8115b653dd5bb2fed2fd1f33cedfde44bdd261195eea4a395874092ee638fe27ccf58b
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
